[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/dialogic/Editor/editor_view.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Images/dialog.svg" type="Texture" id=2]
[ext_resource path="res://addons/dialogic/Images/character-join.svg" type="Texture" id=3]
[ext_resource path="res://addons/dialogic/Images/scene.svg" type="Texture" id=4]
[ext_resource path="res://addons/dialogic/Images/character-leave.svg" type="Texture" id=5]
[ext_resource path="res://addons/dialogic/Images/Script.svg" type="Texture" id=6]
[ext_resource path="res://addons/dialogic/Images/character.svg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )

[node name="EditorView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 5.0
margin_bottom = 27.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="HBoxContainer"]
margin_right = 35.0
margin_bottom = 28.0
text = "File"
items = [ "New dialog", null, 0, false, false, 0, 0, null, "", false ]

[node name="ScenesButton" type="Button" parent="HBoxContainer"]
margin_left = 35.0
margin_right = 69.0
margin_bottom = 28.0
icon = ExtResource( 6 )

[node name="CharactersButton" type="Button" parent="HBoxContainer"]
margin_left = 69.0
margin_right = 103.0
margin_bottom = 28.0
icon = ExtResource( 7 )

[node name="Editor" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 34.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Editor"]
margin_right = 145.0
margin_bottom = 545.0

[node name="ScrollContainer" type="ScrollContainer" parent="Editor/VBoxContainer2"]
margin_right = 145.0

[node name="VBoxContainer" type="VBoxContainer" parent="Editor/VBoxContainer2/ScrollContainer"]

[node name="VBoxContainer" type="VBoxContainer" parent="Editor/VBoxContainer2"]
margin_top = 4.0
margin_right = 145.0
margin_bottom = 329.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelText" type="Label" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_right = 145.0
margin_bottom = 14.0
text = "Pieces"

[node name="ButtonText" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 145.0
margin_bottom = 46.0
text = "  Text Event"
icon = ExtResource( 2 )
align = 0

[node name="ButtonBackground" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 50.0
margin_right = 145.0
margin_bottom = 78.0
text = "  Scene Event"
icon = ExtResource( 4 )
align = 0

[node name="ButtonCharacterJoin" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 82.0
margin_right = 145.0
margin_bottom = 110.0
text = "  Character Join"
icon = ExtResource( 3 )
align = 0

[node name="ButtonCharacterLeave" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 114.0
margin_right = 145.0
margin_bottom = 142.0
text = "  Character Leave"
icon = ExtResource( 5 )
align = 0

[node name="Separator" type="Panel" parent="Editor/VBoxContainer2/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 146.0
margin_right = 145.0
margin_bottom = 153.065
rect_min_size = Vector2( 0, 7.065 )

[node name="LabelNodes" type="Label" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 157.0
margin_right = 145.0
margin_bottom = 171.0
text = "View"

[node name="ButtonFold" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 175.0
margin_right = 145.0
margin_bottom = 195.0
text = "Fold all"
align = 0

[node name="ButtonUnfold" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 199.0
margin_right = 145.0
margin_bottom = 219.0
text = "Unfold all"
align = 0

[node name="Separator2" type="Panel" parent="Editor/VBoxContainer2/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 223.0
margin_right = 145.0
margin_bottom = 230.065
rect_min_size = Vector2( 0, 7.065 )

[node name="LabelResource" type="Label" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 234.0
margin_right = 145.0
margin_bottom = 248.0
text = "Resource:"

[node name="ReloadResource" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 252.0
margin_right = 145.0
margin_bottom = 272.0
text = "Reload"
align = 0

[node name="ButtonSave" type="Button" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 276.0
margin_right = 145.0
margin_bottom = 296.0
text = "Save"
align = 0

[node name="Separator3" type="Panel" parent="Editor/VBoxContainer2/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 300.0
margin_right = 145.0
margin_bottom = 307.065
rect_min_size = Vector2( 0, 7.065 )

[node name="Label3" type="Label" parent="Editor/VBoxContainer2/VBoxContainer"]
margin_top = 311.0
margin_right = 145.0
margin_bottom = 325.0
text = "Dialogic Editor v0.1"

[node name="ScrollContainer" type="ScrollContainer" parent="Editor"]
margin_left = 157.0
margin_right = 997.0
margin_bottom = 545.0
custom_styles/bg = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLine" type="VBoxContainer" parent="Editor/ScrollContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 835.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 9
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ButtonText" to="." method="_on_ButtonText_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ButtonBackground" to="." method="_on_ButtonBackground_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ButtonCharacterJoin" to="." method="_on_ButtonCharacter_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ButtonCharacterLeave" to="." method="_on_ButtonCharacterLeave_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ButtonFold" to="." method="_on_ButtonFold_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ButtonUnfold" to="." method="_on_ButtonUnfold_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ReloadResource" to="." method="_on_ReloadResource_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer2/VBoxContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]
